<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/netology_logo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/title_space"
        android:layout_marginEnd="@dimen/title_space"
        android:layout_marginTop="@dimen/title_space"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintEnd_toStartOf="@+id/imageMenu"
        app:layout_constraintTop_toTopOf="@+id/imageLogo"
        tools:text="Header" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/title_space"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintEnd_toStartOf="@+id/imageMenu"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:text="Subtitle"/>

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        android:contentDescription="@string/menu" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icon_space"
        android:contentDescription="@string/likes"
        tools:text="10"
        app:icon="@drawable/ic_baseline_favorite_border_24"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icons_space"
        tools:text="10"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconGravity="start"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/number_space"
        tools:text="@string/share_count"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shares" />

</androidx.constraintlayout.widget.ConstraintLayout>